--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ h1{
 .navbar ul {
 
     list-style-type: none;
-    background-color: orange;
     padding: 0px;
     margin: 0px;
     overflow: hidden;
@@ -13,7 +12,7 @@ h1{
 
 .navbar a {
 
-    color: black;
+    color: navy;
     text-decoration: none;
     padding: 15px;
     display: block;
@@ -33,8 +32,13 @@ h1{
 
 body {
 
-    background: blue;
-    color: white;
+    background-image: url('bgimg.jpg');
+    background-size: cover;
+    background-attachment: scroll;
+    background-repeat: no-repeat;
+    overflow: auto;
+    min-height: 100vh;
+    color: white;   
 }
 
 h3 {
